--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learnvue",
+  "name": "vue",
   "version": "1.0.0",
-  "description": "Daoshengtech demo",
+  "description": "vue demo",
   "main": "index.js",
   "directories": {
     "example": "example"
@@ -9,6 +9,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Daoshengtech",
+  "author": "lk",
   "license": "ISC"
 }
